--- a/style.css
+++ b/style.css
@@ -80,11 +80,12 @@ h1 {
     text-align: center;
     background-color: #84f5bf;
     font-size: 20px;
-    height: 355px;
-    width: 100%;
+    height: 205px;
 }
 
 .footer2 img {
-    width: 315px;
-    height: 250px;
+    width: 140px;
+    height: 130px;
+    border-radius: 50%;
+    border: 2px solid black;
 }
